remove table, add chart

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -4,5 +4,9 @@
 
 #map {
     width: 100%;
-    height: calc(100vh - 50px);;
+    height: calc(100vh - 50px);
+}
+
+.chart {
+    margin-top: 50px;
 }
