add auth system

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -10,3 +10,12 @@
 .chart {
     margin-top: 50px;
 }
+
+.legend {
+    padding: 20px;
+    background: white;
+}
+
+.content {
+    padding-top: 30px;
+}
